# DesignPatternsAndPrinciples

./: .gitignore  pyproject.toml  readme.md
Behavioural_Design_Pattern/1.Chain_Of_Responsibility/: readme.md
Behavioural_Design_Pattern/2.Command/: command.py
Behavioural_Design_Pattern/4.Mediator/: readme.md
Behavioural_Design_Pattern/5.Memento/: memento.py
Behavioural_Design_Pattern/7.State/: readme.md  state.py
Behavioural_Design_Pattern/8.Strategy/: readme.md  strategy.py
Behavioural_Design_Pattern/9.Template_Method/: template_method.py
Behavioural_Design_Patterns/1.Chain_Of_Responsibility/: chain_of_responsibility.py
Behavioural_Design_Patterns/10.Visitor/: readme.md  visitor.py
Behavioural_Design_Patterns/2.Command/: readme.md
Behavioural_Design_Patterns/3.Iterator/: iterator.py  readme.md
Behavioural_Design_Patterns/4.Mediator/: mediator.py
Behavioural_Design_Patterns/5.Memento/: readme.md
Behavioural_Design_Patterns/6.Observer/: observer.py  readme.md
Behavioural_Design_Patterns/9.Template_Method/: readme.md
Creational_Design_Patterns/1.Factory_Method/: factory_method.py  readme.md
Creational_Design_Patterns/2.Abstract_Factory/: abstract_factory.py  readme.md
Creational_Design_Patterns/3.Builder/: builder.py  readme.md
Creational_Design_Patterns/4.Prototype/: prototype.py  readme.md
Creational_Design_Patterns/5.Singleton/: readme.md  singleton.py
SOLID/1.Single_Reponsibility_Principle/: readme.md  single_responsibility_principle.md  single_responsibility_principle.py
SOLID/2.Open_Close_Principle/: open_close_principle.md  (+2 more)
(+24 files in other folders)
