[tool.poetry]
name = "designpatterns"
version = "0.1.0"
description = "This project includes most common design pattern implemented"
authors = ["Prakash Prajapati <paxprajapati@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.41"
requests = "^2.28.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
